# Natural_Language_Processing_in_Python

./: 01_Intro_Regex_&_Tokenization.ipynb  02_Bag_of_Words(BOW).ipynb  03_Named_Entity_Recognition(NER).ipynb  04_Fake_News_Classif.ipynb  05_Sentiment_Analysis_EDA.ipynb  06_BOW_Sentiment_Analysis.ipynb  07_Text_Preprocessing_Vectorization.ipynb  08_Sentiment_Analysis_Algo.ipynb  09_NLP_with_SpaCy.ipynb  10_POS_Parsing_Word2Vec_&_Semantic_Similarity.ipynb  11_spaCy_Pipelines.ipynb  12_Customizing_spaCy_Models.ipynb  13_Audio_Data_in_Python.ipynb  14_Speech_Recognition_Python.ipynb  15_PyDub.ipynb  16_Transcription_SLP.ipynb  17_NLP_Feature_Engineering_Part_1.ipynb  18_NLP_Feature_Engineering_Part_2.ipynb  19_Building_BOW_Model.ipynb  20_TFidf.ipynb  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
01-Introduction-to-Natural-Language-Processing-in-Python/: 01-Regular-expressions-and-word-tokenization.ipynb  02_Simple_topic_identification.ipynb
01-NLP-basics/: 01-Regular-expressions-and-word-tokenization.ipynb  02_Simple_topic_identification.ipynb  03_Named_entity_recognition.ipynb  04_fake_news_classifier.ipynb
01_Introduction_to_Natural_Language_Processing_in_Python/: 01_Regular_expressions_and_word_tokenization.ipynb
07-Oth-NLP-Topics/: 01_Toeknization.ipynb  02_Stemming.ipynb  03_lemmatization.ipynb  04_Bag_of_Words.ipynb  README.md
_supplementary/: 03_lemmatization.ipynb  05_TFIDF.ipynb  06_Gensim.ipynb
experiments/: 02_Simple_topic_identification.ipynb  04_fake_news_classifier.ipynb
(+1 files in other folders)
