[project]
name = "natural-language-processing-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "textblob>=0.19.0",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.5",
]
